# gitlab-management

./: .gitignore  README.md  prune_gitlab_runners.py
.github/workflows/: ruff.yml  test_gitlab_config.yml
gitflood/: README.md  gitflood.sh  gitlab-ls.py  pyproject.toml
gitlab_approvers/: .env.example  README.md  approval_rules.yml.example  main.py  pyproject.toml
gitlab_config/: .env.example  README.md  config.py  config.yaml.example  groups.py  main.py  projects.py  pyproject.toml
gitlab_config/src/gitlab_config/: cli.py  colors.py  config.py  groups.py  main.py  projects.py
gitlab_config/tests/: conftest.py  test_main.py
